Communication between activities - Using bundle - Using Serializable interface - Using Parcelable interface - Using GSon Serialization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,27 @@
     <string name="app_name">Training Project</string>
     <string name="note_shared_preferences">noteSharedPreferences</string>
 
+    <!--persistent storage-->
     <string name="note_title">Title</string>
     <string name="note_content">Content</string>
     <string name="save_note">Save</string>
-
     <string name="empty_note_title_error">Note title is required.</string>
     <string name="empty_note_content_error">Note content is required.</string>
     <string name="external_storage_access_error">Could not access the external storage.\nHave you included the WRITE_EXTERNAL_STORAGE permission in the manifest?</string>
     <string name="title_activity_settings">Settings</string>
-    
+
+    <!--fragment-->
     <string name="rotate_screen_message">Rotate device to see the expanded screen.</string>
     <string name="tap_send_data_message">Tap this button to send data to the parent activity.</string>
     <string name="click_me">Click me</string>
+
+    <!--communicate between activities-->
+    <string name="integer_type">Integer</string>
+    <string name="double_type">Double</string>
+    <string name="string_type">String</string>
+    <string name="boolean_type">Boolean</string>
+    <string name="array_list_type">ArrayList</string>
+    <string name="hash_map_type">HashMap</string>
+    <string name="not_included_type">This type was not included in bundle.</string>
+    <string name="data">data</string>
 </resources>
