--- a/DemoProject/app/src/main/res/values/strings.xml
+++ b/DemoProject/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="not_included_type">This type was not included in bundle.</string>
     <string name="data">data</string>
     <string name="choose_send_option">Choose a method to send data to another activity.\nThe data includes an integer, a boolean, a double, a string, an array list and a hash map.</string>
+
+    <!--services-->
+    <string name="my_intent_service">MyIntentService</string>
+    <string name="result_receiver">Result Receiver</string>
+    <string name="broadcast_receiver">Broadcast Receiver</string>
 </resources>
