--- a/DemoProject/app/src/main/res/values/strings.xml
+++ b/DemoProject/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="my_intent_service">MyIntentService</string>
     <string name="result_receiver">Result Receiver</string>
     <string name="broadcast_receiver">Broadcast Receiver</string>
+    <string name="intent_service_explanation">This is an IntentService demo.\nChoose a communication option and the current integer will be send to the corresponding service. Right after that, the service will send back that integer to activity and then the activity will update that value on screen.</string>
+    <string name="start_alarm">Start alarm</string>
+    <string name="end_alarm">End alarm</string>
+    <string name="extending_binder_service_explanation">This demonstrates the bound service by extending the Binder class.\nWhen the button is click, the current integer value will be send to service via binding method.\nRight after that, the service will send back that integer to activity using Local Broadcast Manager and the activity will update that value on screen.</string>
+    <string name="increment_by_one">Increment by 1</string>
 </resources>
