--- a/DemoProject/app/src/main/res/values/strings.xml
+++ b/DemoProject/app/src/main/res/values/strings.xml
@@ -37,10 +37,15 @@
     <string name="my_intent_service">MyIntentService</string>
     <string name="result_receiver">Result Receiver</string>
     <string name="broadcast_receiver">Broadcast Receiver</string>
-    <string name="intent_service_explanation">This is an IntentService demo.\nChoose a communication option and the current integer will be send to the corresponding service. Right after that, the service will send back that integer to activity and then the activity will update that value on screen.</string>
+    <string name="intent_service_explanation">This is an IntentService demo.\nChoose a communication option and the current will be sent to the corresponding service. Right after that, the service will increment that value and send it back to this activity. And finally, the result will be updated on screen.</string>
     <string name="start_alarm">Start alarm</string>
     <string name="end_alarm">End alarm</string>
-    <string name="extending_binder_service_explanation">This demonstrates the bound service by extending the Binder class.\nWhen the button is click, the current integer value will be send to service via binding method.\nRight after that, the service will send back that integer to activity using Local Broadcast Manager and the activity will update that value on screen.</string>
+    <string name="extending_binder_service_explanation">This demonstrates the bound service using the extended Binder class.\nWhen the button is tapped, the current integer will be sent to the service via binding method.\nRight after that, the service will increment that value and send it back to this activity using Local Broadcast Manager. And finally, the result will be updated on screen.</string>
     <string name="increment_by_one">Increment by 1</string>
-    <string name="custom_service_explanation">This is a custom service with a scheduled alarm.\nWhen the button StartAlarm is tapped, the alarm is fired and the below number will automatically be incremented after a certain time.</string>
+    <string name="custom_service_explanation">This is a custom service with a scheduled alarm.\nWhen the button StartAlarm is tapped, the alarm is fired and the below number will be automatically incremented after a certain time.</string>
+    <string name="using_execute_on_executor">Using ExecuteOnExecutor?</string>
+    <string name="start_download">Start Download</string>
+    <string name="number_of_images">Number of images</string>
+    <string name="number_of_images_empty_error">Number of images is required.</string>
+    <string name="display_images">Display images?</string>
 </resources>
