add demos - add CacheUsingGlide demo - add CacheUsingPicasso demo

--- a/DemoProject/app/src/main/res/values/strings.xml
+++ b/DemoProject/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="use_cache">Use cache</string>
     <string name="shown_images">Number of shown images:</string>
     <string name="cache_explanation">Toggle the UseCache switch and all images will be reloaded with the according cache state.</string>
+    <string name="refresh">Refresh</string>
 </resources>
 
