add demos - add "Obtain location using LocationManager" demo - add "Obtain location using Google Play services API" demo - add "Take photo using default camera" demo (incomplete) - some other minor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="save_note">Save</string>
     <string name="empty_note_title_error">Note title is required.</string>
     <string name="empty_note_content_error">Note content is required.</string>
-    <string name="external_storage_access_error">Could not access the external storage.\nHave you included the WRITE_EXTERNAL_STORAGE permission in the manifest?</string>
+    <string name="external_storage_access_error">This feature requires permission to access to external storage.</string>
     <string name="title_activity_settings">Settings</string>
 
     <!--fragment-->
@@ -85,5 +85,19 @@
     <string name="pick_using_MultipleImagePick">Pick image using MultipleImagePick library</string>
     <string name="pick_using_custom_gallery">Pick images using custom gallery</string>
     <string name="pick_using_library">Pick images using custom library (FishBun)</string>
+    <string name="current_location">Current location</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="map_image">Map Image</string>
+    <string name="open_map">Open map</string>
+    <string name="fine_location_access_error">This feature requires permission to access fine location</string>
+    <string name="network_provider">Network</string>
+    <string name="gps_provider">GPS</string>
+    <string name="location_provider">Provider</string>
+    <string name="require_according_provider">This requires specified provider to be enabled.</string>
+    <string name="enable">Enable</string>
+    <string name="complete_action_using_label">Complete action using</string>
+    <string name="no_app_handle_intent_error">No app can handle this request</string>
+    <string name="require_camera_permission_error">This feature requires permission to access camera</string>
 </resources>
 
