add demos - fix the dimmed screen issue in light sensor demo - add "Gyroscope" demo - add "Rotation vector sensor" demo - add "Pedometer" demo Note: I couldn't find a device with step counter sensor so the pedometer demo has not been tested yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,5 +114,10 @@
     <string name="screen_face_up">Now screen is facing up</string>
     <string name="phone_stand_up">Now the phone is standing up</string>
     <string name="screen_face_down">Now the screen is facing down</string>
+    <string name="gyroscope_not_available">Gyroscope not available</string>
+    <string name="gyroscope_explanation">Tilt the device to see the effect.</string>
+    <string name="rotation_vector_sensor_explanation">Rotate the device to see the effect.</string>
+    <string name="step_counter_not_available">Step counter sensor not available</string>
+    <string name="number_of_steps">Number of steps since reboot</string>
 </resources>
 
